# beachmark_iNAND

./: .gitignore  README.md  RELEASE.md  Rule_list.xlsx  bachmark SRC.xlsx  main.py  pyproject.toml
docs/spotfire/: ADMIN_SCHEDULE_REQUEST_TEMPLATE.md  EXPORT_CONTRACT.md  RUNBOOK_FALLBACK.md  SPOTFIRE_ANALYSIS_BUILD_GUIDE.md
scripts/: build_windows_exe.ps1  manage_tuesday_task.ps1  paste_excel_to_ppt.ps1  register_tuesday_online_task.ps1  run_all_to_ppt.ps1  run_if_tuesday_online.ps1  validate_spotfire_export.py
src/benchmark/: __init__.py  cli.py  config.py  data_loader.py  excel_writer.py  goal_loader.py  gui.py  processor.py  rule_loader.py  week_calc.py
tests/: conftest.py  test_data_loader.py  test_goal_loader.py  test_processor_and_excel.py  test_rule_loader.py  test_week_calc.py
